--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "webpack": "4.28.4",
     "webpack-cli": "3.2.1",
     "webpack-dev-server": "3.1.14"
+  },
+  "dependencies": {
+    "nunjucks": "^3.2.0",
+    "nunjucks-loader": "^3.0.0"
   }
 }
