--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
   "devDependencies": {
     "express": "4.16.4",
     "html-webpack-plugin": "3.2.0",
-    "webpack": "4.28.4",
+    "webpack": "^4.28.4",
     "webpack-cli": "3.2.1",
     "webpack-dev-server": "3.1.14"
   },
   "dependencies": {
+    "css-loader": "^2.1.1",
+    "node-sass": "^4.11.0",
     "nunjucks": "^3.2.0",
-    "nunjucks-loader": "^3.0.0"
+    "nunjucks-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1"
   }
 }
