--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "css-loader": "^2.1.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "nunjucks": "^3.2.0",
     "nunjucks-loader": "^3.0.0",
